--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -5,20 +5,21 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div class="card w-75">
-                    <div class="card-body">
+                <div class="card w-75 mx-auto text-center">
+                    <div class="card-header">
                         <h4 class="card-title">Log In</h4>
+                    </div>
+                    <div class="card-body">
                         <form id="loginform" role="form" action="/index" method="POST">${ csrf_input}
                             <table class="table" align="center">
                                 ${ form }
                             </table>
-                            <input type="submit" class="btn-custom btn" value="Log In">
+                            <input type="submit" class="btn btn-dark" value="Log In">
                         </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
 </section>
 </%block>
