--- a/homepage/styles/index.css
+++ b/homepage/styles/index.css
@@ -1,3 +1,16 @@
-h4.utc-time {
-    color: #AA3333;
+#login {
+    height: 100%;
+    background-image: linear-gradient(-20deg, #2b5876 0%, #4e4376 100%);
+}
+
+#login .container {
+    padding-top: 50px;
+}
+
+#loginform td, #loginform th {
+    border: 0;
+}
+
+#loginform .btn:hover {
+    cursor: pointer;
 }
