--- a/homepage/templates/locations.edit.html
+++ b/homepage/templates/locations.edit.html
@@ -1,20 +1,46 @@
 <%inherit file="base.htm" />
 
 <%block name="content">
-<section id="edit_location">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <h2>Edit location</h2>
-        <br />
-        <form id="#EditLocationForm" action="/locations.edit/${ location.id }" role="form" method="POST">${ csrf_input}
-          <table class="table">
-          ${ form }
-          </table>
-          <input type="submit" class="btn btn-custom" value="Submit">
-        </form>
-      </div>
-    </div>
-  </div>
-</section>
+<div class="wrapper">
+    <section id="edit_location">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <ul class="nav nav-pills nav-fill">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/assets">Assets</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/locations">Locations</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/manufacturers">Manufacturers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/logout">Logout</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title">Edit a location</h4>
+                            <hr />
+                            <form id="EditLocationForm" action="/locations.edit/${ location.id }" role="form" method="POST">${ csrf_input}
+                                <table class="table">
+                                    ${ form }
+                                </table>
+                                <div class="text-center">
+                                    <input type="submit" class="btn btn-dark" value="Submit">
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
 </%block>
