--- a/homepage/templates/manufacturers.html
+++ b/homepage/templates/manufacturers.html
@@ -1,56 +1,54 @@
 <%inherit file="base.htm" />
 
 <%block name="content">
-<section id="assets">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <ul class="nav nav-pills nav-fill">
-                  <li class="nav-item">
-                    <a class="nav-link" href="/assets">Assets</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/locations">Locations</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="/manufacturers">Manufacturers</a>
-                  </li>
-                </ul>
+<div class="wrapper">
+    <section id="manufacturers">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <ul class="nav nav-pills nav-fill">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/assets">Assets</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/locations">Locations</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/manufacturers">Manufacturers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/logout">Logout</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <a href="manufacturers.create" class="btn btn-dark">Create new manufacturer</a>
+                    <div class="card">
+                        <div class="card-body">
+                            <table class="table">
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Name</th>
+                                    <th>Actions</th>
+                                </tr>
+                                %for m in manufacturers:
+                                <tr>
+                                    <td>${ m.id }</td>
+                                    <td>${ m.manufacturer_name}</td>
+                                    <td>
+                                        <a href="/manufacturers.edit/${ m.id }">Edit</a> |
+                                        <a href="/manufacturers.delete/${ m.id }">Delete</a>
+                                    </td>
+                                </tr>
+                                %endfor
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12">
-                <a href="manufacturers.create" class="btn">Create new manufacturer</a>
-                <table class="table">
-                    <tr>
-                        <th>
-                            ID
-                        </th>
-                        <th>
-                            Name
-                        </th>
-                        <th>
-                            Actions
-                        </th>
-                    </tr>
-                    %for m in manufacturers:
-                    <tr>
-                        <td>
-                            ${ m.id }
-                        </td>
-                        <td>
-                            ${ m.manufacturer_name}
-                        </td>
-                        <td>
-                            <a href="/manufacturers.edit/${ m.id }">Edit</a> |
-                            <a href="/manufacturers.delete/${ m.id }">Delete</a>
-                        </td>
-                    </tr>
-                    %endfor
-                </table>
-            </div>
-        </div>
-    </div>
-
-</section>
+    </section>
+</div>
 </%block>
